[gd_scene load_steps=3 format=3 uid="uid://gwtcggvk6nrt"]

[ext_resource type="Script" uid="uid://cor6u335dub4h" path="res://scripts/ui/pause_menu.gd" id="1_0lmf7"]
[ext_resource type="PackedScene" uid="uid://cnw08jg3nei33" path="res://scenes/ui/options_menu.tscn" id="2_rv0w5"]

[node name="pause_menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lmf7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 40.0
offset_top = 490.0
offset_right = 267.0
offset_bottom = 599.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitToMainMenuButton")
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitToMainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
text = "Quit to Main Menu"

[node name="QuitToDesktopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
text = "Quit Game"

[node name="options_menu" parent="." instance=ExtResource("2_rv0w5")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMainMenuButton" to="." method="_on_quit_to_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToDesktopButton" to="." method="_on_quit_button_pressed"]
[connection signal="exit_options_menu" from="options_menu" to="." method="_on_options_menu_exit_options_menu"]
